# parse_jira_logged_time

./: .gitignore  CHANGELOG.md  README.md  config.py  console.py  gui.py  pyproject.toml  requirements.txt  utils.py  version.py
api/: __init__.py  jira.py  jira_get_total_resolved.py  jira_rss.py  jira_show_last_issue.py  jira_sprint_get_total_overtime_hours.py  requirements.py
api/job_report/: get_hours_worked.py  get_time_spent_in_office.py  get_worklog.py  utils.py
etc/examples/: config.json
resources/: style.qss
resources/examples/: config.json
widgets/: __init__.py  about.py  activities_widget.py  changelog.py  logged_widget.py  logs_widget.py  markdown_viewer.py
widgets/addons/: __init__.py  get_hours_worked.py  get_time_spent_in_office.py  get_worklog.py  jira_get_total_resolved.py  jira_show_last_issue.py  jira_sprint_get_total_overtime_hours.py
widgets/addons/busy_ports/: README.md  __init__.py  get_info_html.py
widgets/addons/eyes/: README.md  __init__.py
widgets/addons/eyes/eyes/: common.py  eye.py  eye_widget.py  eyes_widget.py
widgets/addons/tetris/: README.md  __init__.py
widgets/addons/tetris/tetris/: main_gui.py
widgets/addons/tetris/tetris/src/core/: board.py  piece.py
widgets/addons/tetris/tetris/src/gui/: board_widget.py  common.py  piece_widget.py
widgets/addons/time_calc/: README.md  __init__.py  eval_expr_total_time.py
widgets/addons/total_efforts_calc/: README.md  __init__.py
